--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     compile 'com.github.Hitomis:CircleMenu:v1.1.0'
+    compile 'hanks.xyz:htextview-library:0.1.5'
     implementation 'org.apache.poi:poi:3.16'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.9.0'
