--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,10 @@ version = '1.0.4'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.example.test"
         minSdkVersion 16
